Added more usable notebook for scraping

--- a/scraping_youtube/scraping_youtube_github.ipynb
+++ b/scraping_youtube/scraping_youtube_github.ipynb
@@ -90,7 +90,7 @@
     "from googleapiclient.discovery import build\n",
     "\n",
     "# Please put your own API key here\n",
-    "API_key = \"Put your own API key here\"\n",
+    "API_key = \"Please put your own API key here\"\n",
     "\n",
     "# Defining a loop that uses the YouTube API to scrape the basic data of a video\n",
     "def get_video_details(video_id):\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "# Testing code on example video of the VVD-YouTube-video\n",
+    "# Testing code on example video of the VVD YouTube-channel\n",
     "video_id = \"XqtessUPQEY\"\n",
     "details = get_video_details(video_id)\n",
     "print(details)"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
     }
    ],
    "source": [
-    "# Testing code on example video of the VVD-YouTube-video\n",
+    "# Testing code on example video of the VVD YouTube-channel\n",
     "# Sorry but this video actually is a speech ouch\n",
     "video_id = \"XqtessUPQEY\"\n",
     "transcript = get_transcript(video_id)\n",
@@ -196,13 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Finding this channel ID is a bit of a challenge, but can be done via following this tutorial: https://www.youtube.com/watch?v=0oDy2sWPF38\n",
     "channel_id_VVD = \"UCZean7nAZKDGIHANq-MuaGA\"\n",
     "channel_id_BIJ1 = \"UCI1wgi8HoU-wAnuSPSTDDUA\"\n",
+    "channel_id_GroenLinks = \"UCpYJiwLo1KTKElBq_0xAI7A\"\n",
     "\n",
     "# Getting the playlist of uploads for a specific YouTube channel\n",
     "def get_uploads_playlist_id(channel_id):\n",
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +233,7 @@
     }
    ],
    "source": [
-    "# Testing code on example video of the VVD-YouTube-video\n",
-    "# Sorry but this video actually is a speech ouch\n",
+    "# Testing code on example video of the VVD YouTube-channel\n",
     "uploads_playlist_id = get_uploads_playlist_id(channel_id_BIJ1)\n",
     "print(\"Uploads Playlist ID:\", uploads_playlist_id)"
    ]
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,15 +255,17 @@
     "import json\n",
     "import os\n",
     "\n",
-    "# Cache directory\n",
+    "# Specifying a cache directory to increase the speed of the code\n",
     "CACHE_DIR = \"cache\"\n",
     "if not os.path.exists(CACHE_DIR):\n",
     "    os.makedirs(CACHE_DIR)\n",
     "\n",
+    "# Creating a json-file for the Playlist ID of the relevant YouTube channel\n",
     "def cache_results(filename, data):\n",
     "    with open(os.path.join(CACHE_DIR, filename), 'w') as f:\n",
     "        json.dump(data, f)\n",
     "\n",
+    "# Loading the previously cached results\n",
     "def load_cached_results(filename):\n",
     "    filepath = os.path.join(CACHE_DIR, filename)\n",
     "    if os.path.exists(filepath):\n",
@@ -271,7 +273,9 @@
     "            return json.load(f)\n",
     "    return None\n",
     "\n",
+    "# Defining a function to get all the videos of a specific YouTube channel\n",
     "def get_all_videos(playlist_id):\n",
+    "    # Returning the cached data\n",
     "    cache_filename = f\"{playlist_id}_all_videos.json\"\n",
     "    cached_data = load_cached_results(cache_filename)\n",
     "    if cached_data:\n",
@@ -282,6 +286,7 @@
     "    next_page_token = None\n",
     "\n",
     "    while True:\n",
+    "        # Requesting data via the YouTube API\n",
     "        request = youtube.playlistItems().list(\n",
     "            part=\"snippet\",\n",
     "            playlistId=playlist_id,\n",
@@ -292,21 +297,24 @@
     "        response = request.execute()\n",
     "\n",
     "        for item in response[\"items\"]:\n",
+    "            # Extracting the relevant data\n",
     "            video_id = item[\"snippet\"][\"resourceId\"][\"videoId\"]\n",
     "            title = item[\"snippet\"][\"title\"]\n",
     "            publish_date = item[\"snippet\"][\"publishedAt\"]\n",
     "\n",
+    "            # Appending the outcome variables to an outcome list\n",
     "            video_list.append({\n",
     "                \"video_id\": video_id,\n",
     "                \"title\": title,\n",
     "                \"publish_date\": publish_date\n",
     "            })\n",
     "        \n",
+    "        # Go to next page if needed\n",
     "        next_page_token = response.get(\"nextPageToken\")\n",
     "        if not next_page_token:\n",
     "            break\n",
     "\n",
-    "        # Implementing exponential backoff\n",
+    "        # Implementing sleep time to not hit quota limits\n",
     "        time.sleep(1)\n",
     "\n",
     "    cache_results(cache_filename, video_list)\n",
@@ -315,34 +323,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploads Playlist ID: UUI1wgi8HoU-wAnuSPSTDDUA\n",
-      "Found 181 videos\n"
+      "Uploads Playlist ID: UUpYJiwLo1KTKElBq_0xAI7A\n",
+      "Found 453 videos\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Step 1: Get the uploads playlist ID for the channel\n",
-    "channel_id = channel_id_BIJ1  # or channel_id_VVD\n",
+    "# Getting the uploads playlist ID for the channel\n",
+    "channel_id = channel_id_GroenLinks\n",
     "uploads_playlist_id = get_uploads_playlist_id(channel_id)\n",
     "print(\"Uploads Playlist ID:\", uploads_playlist_id)\n",
     "\n",
-    "# Step 2: Fetch all video IDs from the uploads playlist\n",
+    "# Fetching all video IDs from the uploads playlist\n",
     "videos = get_all_videos(uploads_playlist_id)\n",
     "print(f\"Found {len(videos)} videos\")\n",
     "\n",
-    "# Create a list to store the video details and transcripts\n",
+    "# Creating a list to store the video details and transcripts\n",
     "video_data = []\n",
     "\n",
-    "# Step 3: For each video ID, get the video details and transcript\n",
+    "# For each video ID, get the video details and transcript\n",
     "for video in videos:\n",
     "    video_id = video[\"video_id\"]\n",
     "    details = get_video_details(video_id)\n",
@@ -358,11 +366,11 @@
     "        \"transcript\": transcript\n",
     "    })\n",
     "\n",
-    "# Convert the list to a DataFrame\n",
+    "# Converting the list to a DataFrame\n",
     "df = pd.DataFrame(video_data)\n",
     "\n",
-    "# Export the DataFrame to a CSV file\n",
-    "df.to_csv(\"youtube_videos.csv\", index=False)"
+    "# Exporting the DataFrame to a CSV file\n",
+    "df.to_csv(\"youtube_videos_VVD.csv\", index=False)"
    ]
   }
  ],
